[tool.poetry]
name = "dwaveutils"
version = "0.1.0"
description = "Some useful tools to help users use D-Wave quantum annealer."
authors = ["Zheng-Kai Ye <supon3060@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.56.0"
dwave-ocean-sdk = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pycodestyle = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
