[tool.poetry]
name = "dwaveutils"
version = "0.1.0"
description = "Some useful tools to help users use D-Wave quantum annealer."
authors = ["Zheng-Kai Ye <supon3060@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yezhengkai/dwaveutils"
keywords = [
    "quamtum-computing",
    "dwave-quantum-annealing",
    "dwave-quantum-annealer",
]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.56.0"
dwave-ocean-sdk = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pycodestyle = "^2.6.0"
safety = "^1.10.3"
pylint = "^2.7.4"
pydocstyle = "^6.0.0"
mypy = "^0.812"
bandit = "^1.7.0"
black = "^20.8b1"
pytest-xdist = "^2.2.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = "ignore::DeprecationWarning"
testpaths = ["tests"]
addopts = ["--numprocesses=auto", "--doctest-modules"]
